Fix responsivity and overflow

--- a/admin/src/modules/EditPost/EditPost.sass
+++ b/admin/src/modules/EditPost/EditPost.sass
@@ -1,7 +1,7 @@
 @import "../../mixins.sass"
 
 .edit-post
-  padding: 20px
+  height: 100vh
   +e(categories)
     display: grid
     grid-template-columns: 1fr
