--- a/admin/src/modules/NewPost/NewPost.sass
+++ b/admin/src/modules/NewPost/NewPost.sass
@@ -9,7 +9,7 @@
     padding: 10px
     background: rgba(var(--color-5), 1)
     transition: 1s
-    overflow: hidden
+    overflow: auto
     flex: 1
   +e(save)
     width: 100%
