--- a/admin/src/modules/NewPost/components/Form/Form.sass
+++ b/admin/src/modules/NewPost/components/Form/Form.sass
@@ -3,9 +3,9 @@
 .new-post__form
   background-color: rgba(var(--color-white), 0.8)
   display: grid
-  grid-template-rows: auto auto auto auto
-  grid-template-columns: 50% 50%
-  grid-template-areas: "top top" "left right-0" "left right-1" "bottom bottom"
+  grid-template: repeat(5, auto) / repeat(2, 1fr)
+  // grid-template-columns: repeat(2, 1fr)
+  grid-template-areas: "title title" "categories categories" "appearance appearance" "image image" "bottom bottom"
   justify-items: stretch
   .form-group
     margin: 10px
@@ -14,21 +14,26 @@
 
 .form
   +e(title)
-    grid-area: top
+    grid-area: title
   +e(categories)
-    grid-area: left
+    grid-area: categories
     max-height: 200px
     overflow: auto
   +e(appearance)
-    grid-area: right-0
+    grid-area: appearance
+    display: flex
+    flex-flow: column
+    justify-content: center
+    align-items: center
   +e(image)
-    grid-area: right-1
+    grid-area: image
     display: flex
     justify-content: center
     align-items: center
     position: relative
     background-size: cover!important
     -moz-background-clip: revert
+    overflow: hidden
     &:hover
       background-color: rgba(var(--color-3), 0.2)
     &:before
@@ -39,5 +44,7 @@
       height: 100%
       cursor: pointer
 
-
-
+@media (min-width: 768px)
+  .new-post__form
+    grid-template: repeat(4, 1fr) / repeat(2, 1fr)
+    grid-template-areas: "title title" "categories appearance" "categories image" "bottom bottom"
